--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -40,6 +40,7 @@
     "mocha": "^9.0.3",
     "openzeppelin-solidity": "^2.5.1",
     "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.3.0",
     "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.1.0",
