--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -49,6 +49,7 @@
     "typescript": "^4.3.5",
     "web3": "^1.5.1",
     "winston": "^3.3.3",
+    "yaml": "^1.10.2",
     "yargs": "^17.1.0"
   },
   "scripts": {
