--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -9,56 +9,46 @@
   "authors": "Elliot Friedman, James Moore, Junius Zhou, Denali Marsh",
   "license": "ISC",
   "devDependencies": {
-    "bluebird": "^3.7.2",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^3.0.0",
-    "cross-env": "7.0.3",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.31.0",
-    "ethereumjs-util": "^7.1.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.1",
     "@ethersproject/hardware-wallets": "^5.4.0",
-    "eth-lib": "^0.2.8",
-    "fp-ts": "^2.10.5",
-    "fs-extra": "^10.0.0",
-    "ganache-cli": "^6.12.2",
-    "hardhat": "^2.5.0",
-    "hardhat-contract-sizer": "^2.0.3",
-    "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-local-networks-config-plugin": "^0.0.6",
-    "keccak": "^3.0.1",
-    "lodash": "^4.17.21",
-    "mocha": "^9.0.2",
-    "@nomiclabs/buidler": "^1.4.8",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.2.0",
     "@openzeppelin/hardhat-upgrades": "^1.9.0",
-    "openzeppelin-solidity": "^4.0.0",
+    "@openzeppelin/test-helpers": "^0.5.12",
     "@openzeppelin/truffle-upgrades": "^1.8.0",
+    "@truffle/abi-utils": "^0.2.3",
+    "@truffle/contract": "^4.3.29",
+    "@truffle/hdwallet-provider": "^1.4.3",
+    "@typechain/ethers-v5": "^7.0.1",
+    "@typechain/hardhat": "^2.3.0",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^9.0.0",
+    "@types/yargs": "^17.0.2",
+    "big-integer": "^1.6.48",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
+    "dotenv": "^10.0.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.4",
+    "fp-ts": "^2.11.1",
+    "fs-extra": "^10.0.0",
+    "hardhat": "^2.6.0",
+    "hardhat-contract-sizer": "^2.0.3",
+    "hardhat-gas-reporter": "^1.0.4",
+    "mocha": "^9.0.3",
+    "openzeppelin-solidity": "^2.5.1",
     "reflect-metadata": "^0.1.13",
     "solidity-coverage": "^0.7.16",
-    "truffle": "^5.4.1",
-    "@truffle/artifactor": "^4.0.113",
-    "truffle-contract": "^4.0.31",
-    "truffle-contract-size": "^2.0.1",
-    "@truffle/hdwallet-provider": "^1.4.1",
+    "ts-generator": "^0.1.1",
     "ts-node": "^10.1.0",
     "tsyringe": "^4.6.0",
     "typechain": "^5.1.2",
-    "@typechain/ethers-v5": "^7.0.1",
-    "@typechain/hardhat": "^2.2.0",
-    "@typechain/truffle-v5": "^5.0.0",
-    "@typechain/web3-v1": "^3.0.0",
-    "@types/chai": "^4.2.21",
     "typescript": "^4.3.5",
-    "@types/mocha": "^8.2.3",
-    "utf8": "^3.0.0",
-    "web3": "^1.4.0",
+    "web3": "^1.5.1",
     "winston": "^3.3.3",
-    "yargs": "^17"
+    "yargs": "^17.1.0"
   },
   "scripts": {
     "develop": "ganache-cli -q -i 5777 -p 7545 -m 'candy maple cake sugar pudding cream honey rich smooth crumble sweet treat'",
@@ -86,13 +76,17 @@
     "peggy:burn": "npx truffle exec scripts/sendBurnTx.js",
     "peggy:check": "npx truffle exec scripts/sendCheckProphecy.js",
     "peggy:getTokenBalance": "npx truffle exec scripts/getTokenBalance.js",
-    "peggy:generateAbi": "npx hardhat compile --force && node scripts/generateAbi.js",
     "token:address": "npx truffle exec scripts/getTokenContractAddress.js",
     "token:mint": "npx truffle exec scripts/mintTestTokens.js",
     "token:approve": "npx truffle exec scripts/sendApproveTx.js",
     "test:setup": "cp .env.example .env",
     "coverage": "truffle run coverage",
     "compile": "hardhat compile",
-    "test": "npx hardhat test test/testCosmosBridge.js test/testBridgeBank.js test/test_bridgeBankLock.js test/test_valset.js test/test_security.js test/test_upgradeContracts.js test/test_txSignatureAggregation.js"
+    "test": "concurrently -r -k -s first \"yarn develop\" \"truffle test --network develop test/test*.js\" ",
+    "testHardhat": "npx hardhat test test/test_bridgeBankMigration.ts  test/test_newBridgeBank.ts"
+  },
+  "dependencies": {
+    "concurrently": "^6.2.0",
+    "truffle": "^5.4.7"
   }
 }
