--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -90,10 +90,10 @@
     "testHardhat": "npx hardhat test test/test_bridgeBankMigration.ts  test/test_newBridgeBank.ts"
   },
   "dependencies": {
-    "truffle": "^5.4.7",
     "@types/node": "^10.17.19",
     "concurrently": "^6.2.0",
     "node-notifier": "^10.0.0",
-    "node-notify": "^1.0.0"
+    "node-notify": "^1.0.0",
+    "truffle": "^5.4.7"
   }
 }
