remove db in ethereum relayer

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -17,7 +17,7 @@ linters:
     - govet
     - ineffassign
 #    - interfacer
-    - maligned
+    # - fieldalignment
     - misspell
     - nakedret
     - prealloc
