--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -57,7 +57,7 @@
   "scripts": {
     "develop": "ganache-cli -q -i 5777 -p 7545 -m 'candy maple cake sugar pudding cream honey rich smooth crumble sweet treat'",
     "migrate": "npx truffle migrate --reset",
-    "advance": "npx truffle exec scripts/advanceBlock.js",
+    "advance": "node scripts/advanceBlock.js",
     "integrationtest:approve": "npx truffle exec scripts/test/approve.js",
     "integrationtest:createEthereumAddress": "npx truffle exec scripts/test/createEthereumAddress.js",
     "integrationtest:sendBurnTx": "npx truffle exec scripts/test/sendBurnTx.js",
