--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -78,6 +78,7 @@
     "peggy:check": "npx truffle exec scripts/sendCheckProphecy.js",
     "peggy:getTokenBalance": "npx truffle exec scripts/getTokenBalance.js",
     "peggy:test": "npx hardhat test",
+    "peggy:generateAbi": "npx hardhat compile --force && node scripts/generateAbi.js",
     "token:address": "npx truffle exec scripts/getTokenContractAddress.js",
     "token:mint": "npx truffle exec scripts/mintTestTokens.js",
     "token:approve": "npx truffle exec scripts/sendApproveTx.js",
