--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -86,7 +86,9 @@
     "test": "concurrently -r -k -s first \"yarn develop\" \"truffle test --network develop test/test*.js\" ",
     "testHardhat": "npx hardhat test test/test_bridgeBankMigration.ts  test/test_newBridgeBank.ts",
     "whitelist:run": "npx hardhat run scripts/fetchTokenDetails.js --network mainnet && npx hardhat run scripts/bulk_set_whitelist.ts --network mainnet",
-    "whitelist:test": "npx hardhat run scripts/fetchTokenDetails.js --network hardhat && npx hardhat run scripts/bulk_set_whitelist.ts --network hardhat"
+    "whitelist:test": "npx hardhat run scripts/fetchTokenDetails.js --network hardhat && npx hardhat run scripts/bulk_set_whitelist.ts --network hardhat",
+    "blocklist:run": "npx hardhat run scripts/sync_ofac_blocklist.js --network mainnet",
+    "blocklist:test": "npx hardhat run scripts/sync_ofac_blocklist.js --network hardhat"
   },
   "dependencies": {
     "concurrently": "^6.2.0",
