--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -45,6 +45,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
     "solidity-coverage": "^0.7.16",
+    "tail": "^2.2.3",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.1.0",
     "tsyringe": "^4.6.0",
