--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -98,6 +98,7 @@
   "dependencies": {
     "@types/node": "^10.17.19",
     "concurrently": "^6.2.0",
+    "handlebars": "^4.7.7",
     "node-notifier": "^10.0.0",
     "node-notify": "^1.0.0",
     "truffle": "^5.4.7"
