--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@ethersproject/hardware-wallets": "^5.4.0",
+    "@float-capital/solidity-coverage": "^0.7.17",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
@@ -44,7 +45,6 @@
     "openzeppelin-solidity": "^2.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
-    "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.1.0",
     "tsyringe": "^4.6.0",
