--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -24,6 +24,7 @@
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.21",
+    "@types/deep-equal": "^1.0.1",
     "@types/mocha": "^9.0.0",
     "@types/node-notifier": "^8.0.1",
     "@types/yargs": "^17.0.2",
@@ -32,6 +33,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
+    "deep-equal": "^2.0.5",
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.4",
