prettier for .ts files

--- a/smart-contracts/.prettierrc
+++ b/smart-contracts/.prettierrc
@@ -19,6 +19,15 @@
         "useTabs": false,
         "singleQuote": false
       }
+    },
+    {
+      "files": "*.ts",
+      "options": {
+        "printWidth": 100,
+        "tabWidth": 2,
+        "useTabs": false,
+        "singleQuote": false
+      }
     }
   ]
 }
