Change semicolon setting for typescript files

--- a/smart-contracts/.prettierrc
+++ b/smart-contracts/.prettierrc
@@ -26,7 +26,8 @@
         "printWidth": 100,
         "tabWidth": 2,
         "useTabs": false,
-        "singleQuote": false
+        "singleQuote": false,
+        "semi": false
       }
     }
   ]
