switch to using new go-ethereum

--- a/smart-contracts/Makefile
+++ b/smart-contracts/Makefile
@@ -2,24 +2,17 @@
 
 SHELL:=/bin/bash
 
-setup:
-	python3 -m venv venv ; source ./venv/bin/activate ; pip3 install -r requirements.txt
-	yarn
+include Makefile.smartContracts
+include Makefile.artifacts
+gofiles=$(artifacts:.json=.go)
 
-# Run slither over entire directory
-# `make slither`
-slither: setup
-	slither . || true
+artifacts/%.go: artifacts/%.json
+	bash scripts/do_abigen.sh $< ../cmd/ebrelayer/contract/generated
 
-# Simple static analysis in a human-readable report over entire directory
-# `make slither-pretty-summary`
-slither-pretty-summary: setup
-	slither . --print human-summary
+all: .built ${gofiles}
 
-# Check for ERC 20|223|777|721|165|1820 conformance
-# `make conformance CONTRACT=./contracts/ContractFile.sol CONTRACT_NAME=ContractName`
-erc-conformance: setup
-	slither-check-erc ${CONTRACT} ${CONTRACT_NAME}
+node_modules:
+	npm install
 
 .PHONY: clean clean-smartcontracts clean-node
 clean: clean-node clean-smartcontracts
