--- a/smart-contracts/Makefile
+++ b/smart-contracts/Makefile
@@ -6,16 +6,29 @@ include Makefile.smartContracts
 include Makefile.artifacts
 gofiles=$(artifacts:.json=.go)
 
+all: ${artifacts}
+
+install: all
+
+# x:; echo artifcats: ${artifacts}
+
 artifacts/%.go: artifacts/%.json
 	bash scripts/do_abigen.sh $< ../cmd/ebrelayer/contract/generated
 
+${artifacts}: .hardhat-compile
+
 all: ${gofiles}
 
-node_modules:
+.hardhat-compile: node_modules
+	npx hardhat compile --force
+	touch $@
+
+node_modules: package.json
 	npm install
 
 .PHONY: clean clean-smartcontracts clean-node
 clean: clean-node clean-smartcontracts
+	rm -f .hardhat-compile
 
 clean-smartcontracts:
 	rm -rf build .openzepplin
