Changes to test the support for commission charging tokens. Introduce an example commission charging token along with typescript tests to try it out.

--- a/smart-contracts/tsconfig.json
+++ b/smart-contracts/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
     "resolveJsonModule": true,
@@ -23,6 +22,11 @@
   "include": [
     "./scripts",
     "./deploy",
+    "./test",
+    "./build",
     "./recover/test"
+  ],
+  "files": [
+    "./hardhat.config.ts"
   ]
 }
