Updated the package.json to support the github action tests. I would like to know if there is a better way to use hardhat so the tests do not start until after typechain is finished.

--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -92,7 +92,7 @@
     "token:approve": "npx truffle exec scripts/sendApproveTx.js",
     "test:setup": "cp .env.example .env",
     "compile": "npx hardhat compile --force",
-    "test": "npx hardhat test",
+    "test": "npx hardhat compile; npx hardhat test",
     "gas": "REPORT_GAS=1 yarn test",
     "size": "yarn compile && npx hardhat size-contracts",
     "coverage": "RUN_COVERAGE=1 npx hardhat coverage",
