--- a/test/wasm/Makefile
+++ b/test/wasm/Makefile
@@ -12,3 +12,5 @@ swap:
 
 show-contract-balance:
 	sifnoded q bank balances sif14hj2tavq8fpesdwxxcu44rty3hh90vhujrvcmstl4zr3txmfvw9s62cvu6
+
+test: deploy-contract create-pool swap
