Refactor wasm encoders
- move encoders and query plugins to a wasm package at root level
- create SifchainMsg and SifchainQuery types

--- a/docs/wasm/demo/contract/Cargo.toml
+++ b/docs/wasm/demo/contract/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "reflect"
+name = "swapper"
 version = "0.1.0"
 authors = ["Kevin Jones <kevin.jonesat@gmail.com>"]
 edition = "2018"
