--- a/docs/wasm/demo/Makefile
+++ b/docs/wasm/demo/Makefile
@@ -1,3 +1,6 @@
+compile:
+	make -C contract build
+
 create-pool:
 	./scripts/create_pool.sh
 
@@ -12,5 +15,3 @@ swap:
 
 show-contract-balance:
 	sifnoded q bank balances sif14hj2tavq8fpesdwxxcu44rty3hh90vhujrvcmstl4zr3txmfvw9s62cvu6
-
-test: deploy-contract create-pool swap
