Add add-liquidity message

--- a/docs/wasm/demo/Makefile
+++ b/docs/wasm/demo/Makefile
@@ -13,5 +13,8 @@ deploy-contract:
 swap:
 	./scripts/swap_rowan_ceth.sh
 
+add-liquidity:
+	./scripts/add_liquidity_ceth.sh
+
 show-contract-balance:
 	sifnoded q bank balances sif14hj2tavq8fpesdwxxcu44rty3hh90vhujrvcmstl4zr3txmfvw9s62cvu6
