--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -15,7 +15,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "@openzeppelin/contracts": "^4.2.0",
+    "@openzeppelin/contracts": "4.4.2",
     "@openzeppelin/hardhat-upgrades": "^1.11.0",
     "@openzeppelin/test-helpers": "^0.5.12",
     "@openzeppelin/truffle-upgrades": "^1.8.0",
