Add remove-liquidity message

--- a/docs/wasm/demo/Makefile
+++ b/docs/wasm/demo/Makefile
@@ -16,6 +16,9 @@ swap:
 add-liquidity:
 	./scripts/add_liquidity_ceth.sh
 
+remove-liquidity:
+	./scripts/remove_liquidity_ceth.sh
+
 show-contract-balance:
 	sifnoded q bank balances sif14hj2tavq8fpesdwxxcu44rty3hh90vhujrvcmstl4zr3txmfvw9s62cvu6
 
