--- a/docs/wasm/demo/contract/Cargo.toml
+++ b/docs/wasm/demo/contract/Cargo.toml
@@ -47,6 +47,7 @@ cw2 = "0.11"
 schemars = "0.8"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0" }
+sif-std = { path = "../sif_std/" }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "1.0.0-beta" }
