--- a/.github/workflows/smart-contracts.yml
+++ b/.github/workflows/smart-contracts.yml
@@ -1,9 +1,8 @@
 name: Smart Contracts
 
-on: ['push']
-
-  # pull_request:
-  #   paths: ['smart-contracts/**']
+on:
+  pull_request:
+    paths: ['smart-contracts/**']
 
 jobs:
   test:
@@ -15,10 +14,15 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+
       - name: Use Node.js
         uses: actions/setup-node@v2.1.4
         with:
           node-version: '14.x'
+
+      - name: Install geth
+        run: sudo add-apt-repository -y ppa:ethereum/ethereum && sudo apt-get update && sudo apt-get install ethereum
+
       - name: Clean dependencies
         run: make clean
 
