Update invalid syntax for github action

--- a/.github/workflows/smart-contracts.yml
+++ b/.github/workflows/smart-contracts.yml
@@ -1,7 +1,9 @@
 name: Smart Contracts
 
 on:
-  [pull_request, push]:
+  pull_request:
+    paths: ['smart-contracts/**']
+  push:
     paths: ['smart-contracts/**']
 
 jobs:
