Update to use make file to setup project

--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -21,16 +21,18 @@ jobs:
       - name: Setup integration test environment
         run: |
           source $HOME/.bash_profile
-          bash test/integration/start-integration-env.sh
-      - name: Execute test chain integration tests
-        run: |
-          source $HOME/.bash_profile
-          . test/integration/vagrantenv.sh
-          export LOG_LEVEL=DEBUG
-          bash test/integration/execute_integration_tests_against_any_chain.sh
-      - name: Archive logs from test
-        uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: testlogs2
-          path: test/integration
+          make clean
+          make
+          make tests
+      # - name: Execute test chain integration tests
+      #   run: |
+      #     source $HOME/.bash_profile
+      #     . test/integration/vagrantenv.sh
+      #     export LOG_LEVEL=DEBUG
+      #     bash test/integration/execute_integration_tests_against_any_chain.sh
+      # - name: Archive logs from test
+      #   uses: actions/upload-artifact@v2
+      #   if: always()
+      #   with:
+      #     name: testlogs2
+      #     path: test/integration
