--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -15,12 +15,32 @@ jobs:
           repository: Sifchain/sifchain-devops
           path: deploy
           token: "${{ secrets.GIT_PAT }}"
+
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16'
+
+      - run: |
+          echo $GOBIN
+          echo $GOROOT
+          which go
+
+
+      - name: Use Node.js
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: '14.x'
+
+
       - name: Set up linux environment
         run: # installs development tools and updates .bash_profile
           bash test/integration/setup-linux-environment.sh
       - name: Setup integration test environment
         run: |
           source $HOME/.bash_profile
+          git clean -fdx
+          go clean -modcache
+          go mod tidy
           make clean
           make
           make tests
