--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    timeout-minutes: 40
+    timeout-minutes: 30
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -20,17 +20,11 @@ jobs:
         with:
           go-version: '^1.16'
 
-      - run: |
-          echo $GOBIN
-          echo $GOROOT
-          which go
-
-
-      - name: Use Node.js
-        uses: actions/setup-node@v2.1.4
-        with:
-          node-version: '14.x'
-
+      # - name: Use Node.js
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: '16.x'
+      #     check-latest: true
 
       - name: Set up linux environment
         run: # installs development tools and updates .bash_profile
@@ -46,13 +40,15 @@ jobs:
           pushd smart-contracts && make clean && make && make tests && popd
           make && make tests
 
+      - name: Start standalone peggy
+        run: |
+          ./test/integration/framework/siftool run-env &
+          sleep 120
 
-      # - name: Execute test chain integration tests
-      #   run: |
-      #     source $HOME/.bash_profile
-      #     . test/integration/vagrantenv.sh
-      #     export LOG_LEVEL=DEBUG
-      #     bash test/integration/execute_integration_tests_against_any_chain.sh
+      - name: Run integration tests
+        run: |
+          pushd test/integration && python3 -m pytest -olog_level=DEBUG -olog_file=/tmp/int-test.out -v -s src/peggy2/test_eth_transfers.py
+
       # - name: Archive logs from test
       #   uses: actions/upload-artifact@v2
       #   if: always()
