--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,8 +28,16 @@ jobs:
       run: |
         go get -v -t -d ./...
 
+    - shell: bash
+      env:
+        TEST_SECRET: ${{ secrets.TEST_SECRET }}$
+      run: echo "$TEST_SECRET"
+
     - name: Build
-      run: make install
+      run: |
+        git config -l
+        printenv
+        make install
 
     - name: Test
       run: |
