Add clean cache

--- a/smart-contracts/Makefile
+++ b/smart-contracts/Makefile
@@ -36,6 +36,7 @@ clean-node:
 
 clean-hardhat-artifact:
 	git clean -fdx artifacts 
+	git clean -fdx cache
 
 tests:
 	npx hardhat test test/*.js test/*.ts
