Restore common files. Remove go install in github action

--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -16,15 +16,9 @@ jobs:
           path: deploy
           token: "${{ secrets.GIT_PAT }}"
 
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '^1.16'
-
-      # - name: Use Node.js
-      #   uses: actions/setup-node@v2
+      # - uses: actions/setup-go@v2
       #   with:
-      #     node-version: '16.x'
-      #     check-latest: true
+      #     go-version: '^1.16'
 
       - name: Set up linux environment
         run: # installs development tools and updates .bash_profile
