Update requirements.txt using pip freeze

--- a/test/integration/src/py/requirements.txt
+++ b/test/integration/src/py/requirements.txt
@@ -1,26 +1,94 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
+amqp==5.1.0
 astroid==2.5.2
+async-timeout==4.0.2
 attrs==20.3.0
 autopep8==1.5.6
+base58==2.1.1
+billiard==3.6.4.0
+bitarray==1.2.2
+celery==5.2.6
 certifi==2020.12.5
+cffi==1.15.0
 chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+cosmos==0.1.93.3
+cryptography==36.0.2
+cytoolz==0.11.2
+Deprecated==1.2.13
 docopt==0.6.2
+eth-abi==2.1.1
+eth-account==0.5.7
+eth-hash==0.3.2
+eth-keyfile==0.5.1
+eth-keys==0.3.4
+eth-rlp==0.2.1
+eth-typing==2.3.0
+eth-utils==1.10.0
+frozenlist==1.3.0
+funcsigs==1.0.2
+grpcio==1.44.0
+grpcio-tools==1.44.0
+hexbytes==0.2.2
 idna==2.10
 iniconfig==1.1.1
+ipfshttpclient==0.8.0a2
 isort==5.8.0
+jsonschema==3.2.0
+jwcrypto==1.0
+kombu==5.2.4
 lazy-object-proxy==1.6.0
+lru-dict==1.1.7
 mccabe==0.6.1
+mock==4.0.3
+mongolog==0.1.2
+motor==2.5.1
+multiaddr==0.0.9
+multidict==6.0.2
+netaddr==0.8.0
 packaging==20.9
+parsimonious==0.8.1
+pbr==5.8.1
+pika==1.2.0
 pipreqs==0.4.10
+pkg_resources==0.0.0
 pluggy==0.13.1
+prompt-toolkit==3.0.29
+protobuf==3.20.0
 py==1.10.0
 pycallgraph==1.0.1
 pycodestyle==2.7.0
+pycparser==2.21
+pycryptodome==3.14.1
 pylint==2.7.4
+pymongo==3.12.3
+pyOpenSSL==22.0.0
 pyparsing==2.4.7
+pyrsistent==0.18.1
 pytest==7.1.1
+python-jwt==3.3.2
+python-memcached==1.59
+pytz==2022.1
 PyYAML==5.4.1
 requests==2.25.1
+rlp==2.0.1
+rusty-rlp==0.2.1
+six==1.16.0
 toml==0.10.2
+tomli==2.0.1
+toolz==0.11.2
+tornado==6.1
 urllib3==1.26.4
+varint==1.0.2
+vine==5.0.0
+wcwidth==0.2.5
+web3==5.25.0
+websockets==9.1
 wrapt==1.12.1
 yarg==0.1.9
+yarl==1.7.2
