--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,6 @@
 name: Golang CI
 
-on: [pull_request]
+on: [push,pull_request]
 
 jobs:
   golangci:
@@ -11,7 +11,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2.5.2
         with:
-          version: v1.41
+          version: v1.45.2
   test:
     runs-on: ubuntu-latest
     steps:
@@ -23,6 +23,9 @@ jobs:
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+
+    - name: Install geth
+      run: sudo add-apt-repository -y ppa:ethereum/ethereum && sudo apt-get update && sudo apt-get install ethereum
 
     - name: Build
       run: make install
@@ -38,8 +41,7 @@ jobs:
         done
 
     - name: Upload coverage report
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v4
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.txt
         verbose: true
