Fix a bunch more issues

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,17 +1,8 @@
 name: Golang CI
 
-on: [push,pull_request]
+on: push
 
 jobs:
-  golangci:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2.5.2
-        with:
-          version: v1.45.2
   test:
     runs-on: ubuntu-latest
     steps:
@@ -29,6 +20,12 @@ jobs:
 
     - name: Build
       run: make install
+
+    - name: Lint
+      uses: golangci/golangci-lint-action@v2.5.2
+      with:
+        version:
+          v1.45.2
 
     - name: Test
       run: |
