Cleanup integration test env step.

--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -23,9 +23,7 @@ jobs:
       - name: Setup integration test environment
         run: |
           source $HOME/.bash_profile
-          git clean -fdx
-          pushd smart-contracts && make clean && make && make tests && popd
-          make && make tests
+          make clean && make install && make tests
 
       - name: Start standalone peggy
         run: |
