--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -24,7 +24,7 @@ jobs:
         run: make clean
 
       - name: Build
-        run: make
+        run: make install
 
       - name: Unit test
         run: make tests
