Updated most of the smart contracts scripts to typescript. Updated the process for deploying and syncing the blocklist contract. Still have to do the contract upgrade script.

--- a/smart-contracts/tsconfig.json
+++ b/smart-contracts/tsconfig.json
@@ -21,11 +21,14 @@
   "allowJs": true,
   "include": [
     "./scripts",
+    "./scripts/helpers",
     "./deploy",
     "./test",
+    "./tasks",
+    "./tasks/blocklist",
     "./build",
     "./recover/test"
-  ],
+   ],
   "files": [
     "./hardhat.config.ts"
   ]
