--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -26,6 +26,7 @@
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.21",
     "@types/deep-equal": "^1.0.1",
+    "@types/lodash": "^4.14.181",
     "@types/mocha": "^9.0.0",
     "@types/node-notifier": "^8.0.1",
     "@types/uuid": "^8.3.1",
