Add debugging step

--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -20,6 +20,10 @@ jobs:
         run: # installs development tools and updates .bash_profile
           bash test/integration/setup-linux-environment.sh
 
+      - name: Check environemnt
+        run:
+          cat ~/.bash_profile && echo $GOPATH
+
       - name: Clean
         run: make clean
 
