--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -26,6 +26,8 @@ jobs:
           echo GOPath: $GOPATH
           source ~/.bash_profile
           echo GOPath: $GOPATH
+          which python3
+          which python
 
       - name: Clean
         run: make clean
