Specify venv python

--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Start standalone peggy
         run: |
           source ~/.bash_profile
+          export PATH=./test/integration/framework/venv/bin/python3:$PATH
           ./test/integration/framework/siftool run-env
 
       - name: Run integration tests
