Add python debugging

--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -44,6 +44,8 @@ jobs:
         run: |
           source ~/.bash_profile
           export PATH=./test/integration/framework/venv/bin/python3:$PATH
+          which python
+          which python3
           ./test/integration/framework/siftool run-env
 
       - name: Run integration tests
