--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -69,12 +69,14 @@ jobs:
           sleep 30
           pushd test/integration && framework/venv/bin/python3 -m pytest -olog_level=DEBUG -olog_file=/tmp/int-test.out -v src/peggy2/test_eth_transfers.py::test_erc20_to_sifnode_and_back_first_time
           pushd test/integration && framework/venv/bin/python3 -m pytest -olog_level=DEBUG -olog_file=/tmp/int-test.out -v src/peggy2/test_eth_transfers.py || cat /tmp/sifnode/sifnoded.log
-          cat /tmp/int-test.out
 
       # TODO: Remove before commit
-      - name: Testing file scope
+      - name: Cat test output file scope
         run:
-          ls -lt /tmp/int-test.out
+          cat /tmp/int-test.out
+
+
+
       # - name: Archive logs from test
       #   uses: actions/upload-artifact@v2
       #   if: always()
